Added UIKitten, created styled homepage and another page

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -1,9 +1,11 @@
 {
-  "common": {},
-  "Homepage": {
-    "welcome": "Welcome {{name}} {{surname}}",
+  "common": {
     "italian": "Italian",
-    "english": "English",
+    "english": "English"
+  },
+  "Homepage": {
+    "welcome": "Thank you to use the {{name}} {{surname}}\n😍 😘 🙏🏻",
+    "releasedWithLove": "Created and released with ❤️ for you",
     "goToAnotherPage": "Go to another page"
   },
   "AnotherPage": {
