Removed UIKitten, added NativeBase, replaced React-Navigation Header with Custom Header component, removed vector-icons using the one in NativeBase

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -3,12 +3,16 @@
     "italian": "Italian",
     "english": "English"
   },
+  "Header": {
+    "back": "Back"
+  },
   "Homepage": {
     "welcome": "Thank you to use the {{name}} {{surname}}\n😍 😘 🙏🏻",
     "releasedWithLove": "Created and released with ❤️ for you",
     "goToAnotherPage": "Go to another page"
   },
   "AnotherPage": {
-    "welcome": "Welcome to another page"
+    "welcome": "Welcome to another page",
+    "OtherPage": "Other Page"
   }
 }
