--- a/src/i18n/locales/it.json
+++ b/src/i18n/locales/it.json
@@ -3,12 +3,16 @@
     "italian": "Italiano",
     "english": "Inglese"
   },
+  "Header": {
+    "back": "Indietro"
+  },
   "Homepage": {
     "welcome": "Grazie per usare il {{name}} {{surname}}\n😍 😘 🙏🏻",
     "releasedWithLove": "Creato e rilasciato con ❤️ per voi",
     "goToAnotherPage": "Vai in un'altra pagina"
   },
   "AnotherPage": {
-    "welcome": "Benvenuto in un'altra pagina"
+    "welcome": "Benvenuto in un'altra pagina",
+    "OtherPage": "Altra Pagina"
   }
 }
