Fixed some navigation calls, refactorized ModalPage, changed navigation from right for pages on android, added new style of transition for the modal page

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -17,6 +17,7 @@
     "OtherPage": "Other Page"
   },
   "ModalPage": {
+    "PageName": "Modal Page",
     "thisIsAModal": "This is a modal!"
   }
 }
