--- a/src/i18n/locales/it.json
+++ b/src/i18n/locales/it.json
@@ -17,6 +17,7 @@
     "OtherPage": "Altra Pagina"
   },
   "ModalPage": {
+    "PageName": "Modale",
     "thisIsAModal": "Questa è una modale!"
   }
 }
