Feat: Migrated to React-Navigation v5 (#27)
* Migrated to React-Navigation v5

* Fixed some navigation calls, refactorized ModalPage, changed navigation from right for pages on android, added new style of transition for the modal page

* Added navigate Saga utility, refactor, and fixes using useCallback

--- a/src/i18n/locales/it.json
+++ b/src/i18n/locales/it.json
@@ -9,10 +9,15 @@
   "Homepage": {
     "welcome": "Grazie per usare il {{name}} {{surname}}\n😍 😘 🙏🏻",
     "releasedWithLove": "Creato e rilasciato con ❤️ per voi",
-    "goToAnotherPage": "Vai in un'altra pagina"
+    "goToAnotherPage": "Vai in un'altra pagina",
+    "openModal": "Apri la modale"
   },
   "AnotherPage": {
     "welcome": "Benvenuto in un'altra pagina",
     "OtherPage": "Altra Pagina"
+  },
+  "ModalPage": {
+    "PageName": "Modale",
+    "thisIsAModal": "Questa è una modale!"
   }
 }
