--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -9,10 +9,15 @@
   "Homepage": {
     "welcome": "Thank you to use the {{name}} {{surname}}\n😍 😘 🙏🏻",
     "releasedWithLove": "Created and released with ❤️ for you",
-    "goToAnotherPage": "Go to another page"
+    "goToAnotherPage": "Go to another page",
+    "openModal": "Open Modal"
   },
   "AnotherPage": {
     "welcome": "Welcome to another page",
     "OtherPage": "Other Page"
+  },
+  "ModalPage": {
+    "PageName": "Modal Page",
+    "thisIsAModal": "This is a modal!"
   }
 }
