Removed UIKitten, added Nativebase v3, rewrtitten UI, removed ghibli APIs examples, added reqres APIs examples, chore dependencies, upgraded to RN0.69.1

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -9,15 +9,26 @@
   "Homepage": {
     "welcome": "Thank you for using the React Native Starter App\n😍 😘 🙏🏻",
     "releasedWithLove": "Created and released with ❤️ for you",
-    "goToAnotherPage": "Go to another page",
-    "openModal": "Open Modal"
+    "gotoUsersList": "Go to Users List",
+    "openModal": "Open Modal",
+    "createNewUser": " Create new user",
+    "ModifyUser": "Modify user",
+    "DeleteUser": "Delete user",
+    "UserCreated": "User created!",
+    "UserNotCreated": "Error! User not created!",
+    "UserModified": "User modified",
+    "UserNotModified": "Error! User not modified",
+    "UserDeleted": "User deleted",
+    "UserNotDeleted": "Error! User not deleted"
   },
-  "AnotherPage": {
-    "welcome": "Welcome to another page",
-    "OtherPage": "Other Page"
+  "UsersList": {
+    "UsersList": "Users List"
   },
   "ModalPage": {
     "PageName": "Modal Page",
     "thisIsAModal": "This is a modal!"
+  },
+  "UserDetails": {
+    "UserDetails": "User Details"
   }
 }
